# my-SFML-games

game1/: CMakeLists.txt
game1/src/: main.cpp  pers.cpp  pers.h
